# lidar_human_detection

./: CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.sh
install/human_detection_package/lib/human_detection_package/: human_detection_node.py
install/human_detection_package/share/ament_index/resource_index/package_run_dependencies/: human_detection_package
install/human_detection_package/share/human_detection_package/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/human_detection_package/share/human_detection_package/cmake/: human_detection_packageConfig.cmake
launch/: human_detection_launch.py  velodyne_launch.py
log/: latest_build
rviz/: human_detection.rviz
src/: human_detection_node.py  pcl_helper.py
